--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <meta property="og:title" content="Alisha &amp; Ilham - digiwed-invitation.com" />
     <meta property="og:description"
         content="Hi, You&#039;re invited to our wedding ceremony - Alisha &amp; Ilham Wedding - Sunday, April 5th 2026" />
-    <meta property="og:image" content="asset/Cover.png"/>
+    <meta property="og:image" content="https://drive.google.com/thumbnail?id=194PPMrZRe0xwYBG4WY777P4QCm2n0KQR&sz=w2000"/>
     <meta property="og:locale" content="in_ID">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content=".asset/Cover.png">
+    <meta property="twitter:card" content=".https://drive.google.com/thumbnail?id=194PPMrZRe0xwYBG4WY777P4QCm2n0KQR&sz=w2000">
     <meta property="twitter:url" content="index.html">
     <meta property="twitter:title" content="Alisha &amp; Ilham - digiwed-invitation.com">
     <meta property="twitter:description"
         content="Hi, You&#039;re invited to our wedding ceremony - Alisha &amp; Ilham Wedding - Sunday, April 5th 2026">
-    <meta property="twitter:image" content=".asset/Cover.png">
+    <meta property="twitter:image" content=".https://drive.google.com/thumbnail?id=194PPMrZRe0xwYBG4WY777P4QCm2n0KQR&sz=w2000">
 
     <script src="src/jquery.js"></script>
 
